Integrated form to create blogs

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -5731,6 +5731,9 @@ button.close {
     display: none !important; } }
 
 .margin-top {
-  margin-top: 50px; }
+  margin-top: 60px; }
+
+form {
+  margin-top: 20px; }
 
 /*# sourceMappingURL=app.css.map */
