created api for blogs listing

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -5736,4 +5736,7 @@ button.close {
 form {
   margin-top: 20px; }
 
+.default-blog-height {
+  height: 200px; }
+
 /*# sourceMappingURL=app.css.map */
